kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopsphere
  labels:
    app.kubernetes.io/name: shopsphere
    app.kubernetes.io/part-of: shopsphere
    environment: dev
