kubernetes/base/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: shopsphere
  labels:
    app: order-service
spec:
  replicas: 2

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      serviceAccountName: order-service
      containers:
        - name: order-service

          image: 278177224853.dkr.ecr.ap-south-1.amazonaws.com/shopsphere-order-service:30

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: shopsphere
spec:
  type: ClusterIP

  selector:
    app: order-service

  ports:
    - port: 8000
      targetPort: 8000
