kubernetes/base/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: shopsphere
  labels:
    app: product-service
    app.kubernetes.io/part-of: shopsphere
spec:
  replicas: 2

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service
        app.kubernetes.io/part-of: shopsphere

    spec:
      containers:
        - name: product-service

          image: 278177224853.dkr.ecr.ap-south-1.amazonaws.com/shopsphere-product-service:30
          imagePullPolicy: IfNotPresent


          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: shopsphere
spec:
  type: ClusterIP

  selector:
    app: product-service

  ports:
    - port: 8000
      targetPort: 8000
