kubernetes/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: shopsphere
  labels:
    app: user-service
    app.kubernetes.io/part-of: shopsphere
spec:
  replicas: 2

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service
        app.kubernetes.io/part-of: shopsphere

    spec:
      containers:
        - name: user-service

          image: 278177224853.dkr.ecr.ap-south-1.amazonaws.com/shopsphere-user-service:30

          imagePullPolicy: IfNotPresent
          
          ports:
            - containerPort: 8000
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: shopsphere
  labels:
    app: user-service
spec:
  type: ClusterIP

  selector:
    app: user-service

  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
